tests/paczka2/big_fuzzy/70824112.err
Error in line 1: XeVsTIJAoY A14 86,5
Error in line 8: FqQWUbdL1 S998 36,5
Error in line 7: Ho9xp6ThnEY S478 11,5
Error in line 15: XeVsTIJAoY S478 237,1
Error in line 16: XeVsTIJAoY A14 5,2
Error in line 14: 7bK A14 11,8
Error in line 18: u1reJDn A14 2,2
Error in line 19: S478 S478 70,7
Error in line 46: XeVsTIJAoY S671 91,9
Error in line 17: FqQWUbdL1 A14 90,9
Error in line 52: Ho9xp6ThnEY S478 44,9
Error in line 61: 7bK S478 82,2
Error in line 63: 7bK S671 83,7
Error in line 56: XeVsTIJAoY S478 180,0
Error in line 81: u1reJDn S478 83,1
Error in line 78: 0dqQb9x5 S671 83,5
Error in line 69: 7bK S478 73,7
Error in line 94: XeVsTIJAoY S478 26,0
Error in line 95: XeVsTIJAoY A14 79,9
Error in line 103: 0dqQb9x5 S478 66,4
Error in line 91: 7bK S998 40,8
Error in line 101: u1reJDn A14 7,1
Error in line 109: u1reJDn S671 47,6
Error in line 106: XeVsTIJAoY S671 150,4
Error in line 107: 7bK A14 23,2
Error in line 117: S478 S478 308,5
Error in line 118: u1reJDn S671 63,8
Error in line 123: Ho9xp6ThnEY S478 478,9
Error in line 122: S478 A14 41,7
Error in line 136: 7bK S478 11,5
Error in line 138: 0dqQb9x5 S478 3,7
Error in line 150: Ho9xp6ThnEY A14 94,6
Error in line 148: 7bK A14 69,4
Error in line 172: XeVsTIJAoY S671 77,3
Error in line 176: XeVsTIJAoY S998 97,6
Error in line 185: ObK S6O1 59,9
Error in line 184: Ho9xp6ThnEY S478 331,6
Error in line 198: 7bK S671 51,8
Error in line 201: Ho9xp6ThnEY S998 76,1
Error in line 196: u1reJDn S478 248,8
Error in line 231: XeVsTIJAoY S478 273,1
Error in line 234: FqQWUbdL1 A14 18,0
Error in line 240: XeVsTIJAoY S671 59,7
